Made some changes

--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -89,7 +89,7 @@
         function openFiles(evt, route) {
             let div;
             var i, tablinks;
-            var fullRoute = "http://localhost:8080/api/" + route;
+            var fullRoute = "http://localhost:8080/api/user/" + route;
             tablinks = document.getElementsByClassName("tablinks");
             for (i = 0; i < tablinks.length; i++) {
                 tablinks[i].className = tablinks[i].className.replace(" active", "");
