Needs to be merged now

--- a/src/main/resources/templates/file-reupload.html
+++ b/src/main/resources/templates/file-reupload.html
@@ -60,8 +60,8 @@
                     <div class="row">
                         <div class = "col-md">
                             <div class="mb-3">
-                                <label class="text-secondary" for="logoFile">File: </label><br>
-                                <input th:field="*{logoFile}" type="file" required/>
+                                <label class="text-secondary" for="file">File: </label><br>
+                                <input th:field="*{file}" type="file" required/>
 
                             </div>
                         </div>
