Added the has roles to work correctly

--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -133,9 +133,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm">
-                            <div class = "d-flex justify-content-end">
-                                <button class="btn btn-danger btn-lg">Cancel</button>
-                            </div>
+
 
                         </div>
                         <div class="col-sm">
@@ -144,6 +142,9 @@
                     </div>
                 </div>
             </form>
+            <div class = "d-flex">
+                <a href = "/myFiles"><button class="btn btn-danger btn-lg">Cancel</button></a>
+            </div>
         </div>
     </div>
 
