--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -83,7 +83,8 @@ a{
     cursor: pointer;
     height: 26px;
     transition: ease all 0.15s;
-    width: 80%;
+    margin: 10px;
+    width: 100%;
 }
 
 .download-btn:hover {
@@ -99,20 +100,8 @@ a{
     cursor: pointer;
     height: 26px;
     transition: ease all 0.15s;
-    width: 60%;
-
-}
-
-.insights-btn {
-    font-size: 12px;
-    background-color: #b2b2b2;
-    color: white;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
-    height: 26px;
-    width: 26px;
-    transition: ease all 0.15s;
+    margin: 10px;
+    width:100%;
 }
 
 .view-btn:hover {
@@ -152,14 +141,59 @@ a{
 }
 
 #wrapper {
-    width: 100%;
+    width: 80%;
     display: flex;
 }
 
-/*#wrapper > div {*/
-/*    flex-grow: 1;*/
-/*}*/
-
-.button-center{
+td
+{
     text-align: center;
+    vertical-align: middle;
+}
+body {font-family: Arial;}
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 10px;
+    padding: 10px;
+#wrapper > div {
+    flex-grow: 1;
 }
