--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -83,8 +83,7 @@ a{
     cursor: pointer;
     height: 26px;
     transition: ease all 0.15s;
-    margin: 10px;
-    width: 100%;
+    width: 80%;
 }
 
 .download-btn:hover {
@@ -100,8 +99,20 @@ a{
     cursor: pointer;
     height: 26px;
     transition: ease all 0.15s;
-    margin: 10px;
-    width:100%;
+    width: 60%;
+
+}
+
+.insights-btn {
+    font-size: 12px;
+    background-color: #b2b2b2;
+    color: white;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    height: 26px;
+    width: 26px;
+    transition: ease all 0.15s;
 }
 
 .view-btn:hover {
@@ -141,14 +152,16 @@ a{
 }
 
 #wrapper {
-    width: 80%;
+    width: 100%;
     display: flex;
 }
 
-td
-{
+/*#wrapper > div {*/
+/*    flex-grow: 1;*/
+/*}*/
+
+.button-center{
     text-align: center;
-    vertical-align: middle;
 }
 body {font-family: Arial;}
 
@@ -194,6 +207,4 @@ body {font-family: Arial;}
     grid-template-columns: auto auto;
     grid-gap: 10px;
     padding: 10px;
-#wrapper > div {
-    flex-grow: 1;
 }
