Add modal to insights button

--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -178,3 +178,29 @@ h1{
     text-align: center;
 }
 
+.modal-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.3);
+    position: fixed;
+    top:0;
+    left:0;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0;
+    pointer-events: none;
+
+}
+.modal{
+    background-color: white;
+    width: 50%;
+    padding: 30px 50px;
+    border-radius: 10px;
+    text-align: center;
+
+}
+.modal-container.show{
+    pointer-events: auto;
+    opacity: 1;
+}
