--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -12,11 +12,6 @@
     width: 90%;
 }
 
-.table-wrapper
-{
-
-}
-
 #file-table{
     border-collapse: collapse;
     width: 100%;
@@ -84,7 +79,7 @@ a{
 }
 
 h1{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -97,7 +92,40 @@ h1{
     cursor: pointer;
     height: 26px;
     transition: ease all 0.15s;
-    width: 80%;
+    width: 100%;
+}
+
+.modify-btn {
+    font-size: 12px;
+    background-color: #2dc459;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    height: 26px;
+    transition: ease all 0.15s;
+    width: 100%;
+}
+
+.modify-btn:hover{
+    background-color: #31dc65;
+}
+#c1,#c2, #c3, #c4{
+    padding: 5px;
+}
+
+.tab-btn{
+    font-size: 15px;
+    background-color: white;
+    border: none;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.tab-btn:hover{
+    background-color: #dedede;
 }
 
 .download-btn:hover {
@@ -113,7 +141,7 @@ h1{
     cursor: pointer;
     height: 26px;
     transition: ease all 0.15s;
-    width: 60%;
+    width: 100%;
 
 }
 
@@ -168,6 +196,8 @@ h1{
 #wrapper {
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*#wrapper > div {*/
