--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -116,7 +116,7 @@ h1{
 
 .tab-btn{
     font-size: 15px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     border: none;
     text-decoration: none;
     font-weight: bold;
